        を定義することで標準でS2Dao_BasicResultSetFactoryとS2Dao_BasicStatementFactoryを利用します。
        
    * statementFactoryとresultSetFactoryのtypehintに以下を記述しました。
        S2Dao_StatementFactory $statementFactory = null
        S2Dao_ResultSetFactory $resultSetFactory = null
        
    * src/examples 以下に S2Dao_AbstractDao を利用するサンプルを配置しました。
      src/examples/impl/CdDaoImpl.class.php を参考にしてください。

2005-11-28 nowel <nowel@xole.net>

    * src/example の Dao, Entityをディレクトリに移動しました。
    
    * src/s2dao.php5/org/seasar/framework/util の中身を
      src/s2dao.php5/org/seasar/dao/util に移動しました。

    * S2Dao_Dbms と S2Dao_DatabaseMetaDataUtil
        - S2Dao_DatabaseMetaDataUtil::getTables()
        - S2Dao_DatabaseMetaDataUtil::getTableInfo()
        にて org.seasar.dao.dbms.S2Dao_ の各DBMSごとに SQL を発行するように変更しました。
        - getTableSql()
        - getTableInfoSql()
        上記の変更により、対応しているDBMSにメソッドを追加しました。

2005-11-27 nowel <nowel@xole.net>

    * fix - SQL Comment に関する処理を修正しました。
    * fix - Improved Performance; Premared Statement.
            プリペアステートメントに関する処理を修正しました。

    * PDO update PDOの処理を更新しました。
        - support サポートされているDBMSは以下です。
            - mysql
            - sqlite
            - pgsql
        - not yet まだサポートしていないDBMSは以下です。
            - oracle
            - odbc(db2)
            - and other dbms

2005-11-23 nowel <nowel@xole.net>

    * SQLコメント ELSE に対応しました。
        SqlParserのnodeStack(Nodeに関する処理)を修正しました。

    * _QUERY アノテーション対応しました。

    * Dao => Array_*** methods
        ArrayObject 形式から 通常の array() に変更しました。
        List_*** メソッドでは ArrayObject を継承しているため、似たようなオブジェクトになって
        いる為変更しました。

2005-11-1x nowel <nowel@xole.net>

    * beta 2 に移行します。
        - Namespace 対策及び S2Conatiner beta3 に合わせるため S2Dao_ プレフィックスを付加しました。
        - S2DaoLoader に export() を追加。
            S2ContainerClassLoader に import する方法に変更しました。
        - S2Dao.PHP5 で用意していた SSRMessages.properties は
          S2Container.PHP5 のSSRMessages.properties と DaoMessages.propertis をマージしていましたが